@@ -6,10 +6,6 @@ gemspec :name => 'json'
 gemspec :name => 'json_pure'
 gemspec :name => 'json-java'
 
-group :development, :test do
-  gem 'simplecov', :platform => :mri_19
-end
-
-group :test do
-  gem 'test-unit', '2.4.7', :platform => :mri_19
-end
+gem 'utils'
+gem 'test-unit'
+gem 'debugger', :platform => :mri_19
