@@ -1,6 +1,6 @@
 module JSON
   # JSON version
-  VERSION         = '1.6.7'
+  VERSION         = '1.6.8'
   VERSION_ARRAY   = VERSION.split(/\./).map { |x| x.to_i } # :nodoc:
   VERSION_MAJOR   = VERSION_ARRAY[0] # :nodoc:
   VERSION_MINOR   = VERSION_ARRAY[1] # :nodoc:
